<resources>
    <string name="app_name">FakioLegacy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Alex Patriche</string>
    <string name="nav_header_subtitle">alexandru.patriche92@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="settings_action_add">Add new</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_history">History</string>

    <string name="history_text_empty">No upload history available</string>
    <string name="history_button_clear">Clear History</string>

    <string name="settings_title_network">Network</string>
    <string name="settings_title_help">Help</string>
    <string name="settings_title_about">About</string>

    <string name="settings_wifi_only_title">Upload on WiFi only</string>
    <string name="settings_wifi_only_desc">Only upload images when connected to WiFi</string>

    <string name="settings_faq_title">FAQ</string>
    <string name="settings_faq_desc">Frequently asked questions</string>
    <string name="settings_support_title">Contact Support</string>
    <string name="settings_support_desc">Get help from our team</string>

    <string name="settings_about_version_title">App Version</string>
    <string name="settings_about_privacy_title">Privacy Policy</string>
    <string name="settings_about_privacy_desc">Read our privacy policy</string>

    <string name="error_storage_permission_required">Storage permission is required to view gallery</string>
    <string name="error_no_image_selected">Please select an image first</string>
    <string name="error_upload_failed">Upload failed</string>
</resources>