<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp">

    <TextView
        android:id="@+id/text_network_section"
        style="@style/SettingsSectionTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/settings_title_network"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_network"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_small"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_network_section" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_wifi_only"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_network">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_size_medium">

            <ImageView
                android:id="@+id/image_wifi_only"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:contentDescription="Wifi icon"
                android:src="@android:drawable/ic_dialog_info"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/text_wifi_only_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:text="@string/settings_wifi_only_title"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintEnd_toStartOf="@id/switch_wifi_only"
                app:layout_constraintStart_toEndOf="@id/image_wifi_only"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_wifi_only_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/settings_wifi_only_desc"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintEnd_toStartOf="@id/switch_wifi_only"
                app:layout_constraintStart_toEndOf="@id/image_wifi_only"
                app:layout_constraintTop_toBottomOf="@id/text_wifi_only_title" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_wifi_only"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>